--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,22 +10,22 @@
 </head>
 <body>
     <header class="gridContainer">
-        <img class="img_head" src="" alt="Logo">
+        <img class="img_head" src="Images/logo-1.png" alt="Logo">
         <ul class="list_head">
             <li class="home"><a href="">Home</a></li>
-            <li class="projects"><a href="">Projects</a></li>
-            <li class="about"><a href="">About</a></li>
-            <li class="contact"><a href="">Contact</a></li>
+            <li class="projects"><a href="#Projects">Projects</a></li>
+            <li class="about"><a href="#About">About</a></li>
+            <li class="contact"><a href="#Contact">Contact</a></li>
         </ul>
         <ul class="list_icons_head">
-            <img src="" alt="Facebook">
-            <img src="" alt="LinkedIn">
-            <img src="" alt="GitHub">
+            <img src="Images/IconFb.png" alt="Facebook">
+            <img src="Images/IconLkdn.png" alt="LinkedIn">
+            <img src="Images/IconGit.png" alt="GitHub">
         </ul>
     </header>
     <section>
         <article class="article1">
-        <h1 class="name">Jesús Aguilar</h1>
+        <h1 class="name">JESÚS AGUILAR</h1>
         <h2 class="subName">Web developer</h2>
         <p class="description">Lorem ipsum dolor sit amet co, ratione aspernatur,
             error facere exercitationem minus ipsam molestiae quod esse autem eius
@@ -33,31 +34,31 @@
         </article>
         <article class="article2">
             <h2 class="h2Sub">What I Do</h2>
-            <div class="Container">
+            <div class="container">
                 <div class="card">
-                    <img src="" alt="Img">
-                    <h3>Machine Learning</h3>
+                    <img src="Images/IconWeb.png" alt="Img">
+                    <h3>Web Developer</h3>
                     <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="Img">
+                    <img src="Images/IconGame.png" alt="Img">
                     <h3>Game Development</h3>
                     <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="Img">
-                    <h3>Data Analytics</h3>
+                    <img src="Images/IconUIUX.png" alt="Img">
+                    <h3>UI/UX Design</h3>
                     <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="Img">
-                    <h3>Automation</h3>
+                    <img src="Images/IconSecure.png" alt="Img">
+                    <h3>Cyber Security</h3>
                     <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore</p>
                 </div>
             </div>
         </article>
         <article class="article3">
-            <h2 class="h2Sub">Projects</h2>
+            <h2 class="h2Sub" id="Projects">Projects</h2>
             <div class="container2">
                 <div class="card2">
                     <h3>Machine learning</h3>
@@ -78,18 +79,18 @@
             </div>
         </article>
         <article class="article4">
-                <h2 class="h2Sub">About</h2>
+                <h2 class="h2Sub" id="About">About</h2>
                 <div class="container3">
                     <div class="card3">
-                        <img src="" alt="Foto">
-                    <h2>Jesús Aguilar</h2>
-                    <ul>
-                        <img src="" alt="Facebook">
-                        <img src="" alt="LinkedIn">
-                        <img src="" alt="GitHub">
-                    </ul>
+                        <img src="Images/logo-1.png" alt="Foto">
+                        <h2>Jesús Aguilar</h2>
+                        <ul>
+                            <img src="Images/IconFb.png" alt="Facebook">
+                            <img src="Images/IconLkdn.png" alt="LinkedIn">
+                            <img src="Images/IconGit.png" alt="GitHub">
+                        </ul>
                     </div>
-                    <p class="card4">lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore lorem ipsum Lorem lorem
+                    <p class="card3_1">lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore lorem ipsum Lorem lorem
                         lorem lorem ipsum dolor sit amet lore lorem ipsum lorem lorem Lorem ipsum dolor sit 
                         laboriosam porro illum non, praesentium, quod et nam, totam dolorum commodi!
                         amet consectetur, adipisicing elit. Est omnis temporibus fugit autem consequuntur 
@@ -99,28 +100,25 @@
         </article>
     </section>
     <footer>
-        <h2 class="h2Sub">Contact</h2>
-        <div>
-            <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore lorem lorem Lorem lorem ipsum Lorem ipsum dolor sit amet consectetur
+        <h2 class="h2Sub" id="Contact">Contact</h2>
+        <div class="container4">
+            <p class="card4">lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore lorem lorem Lorem lorem ipsum Lorem ipsum dolor sit amet consectetur
                 adipisicing elit. Odio architecto eos accusamus, minima consequuntur
-                neque voluptatibus molestiae nobis at voluptas expedita, quos perspiciatis corporis mollitia commodi aliquam. Amet, nihil adipisci?
+                neque voluptatibus molestiae nobis at voluptas expedita, quos perspiciatis corporis mollitia commodi aliquam. Amet, nihil adipisci?t
+                lorem ipsum dolor sit amet lore lorem lorem Lorem lorem ipsum Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Odio architecto eos accusamus, minima consequuntur
+                neque voluptatibus molestiae nobis at voluptas expedita, quos pers
             </p>
-            <div>
-                <form id="contact" action="#" method="POST">
-                    <div class="row">
-                        <input class="input" name="name" type="text" value="Name" size="30" /><br />
-                    </div>
-                    <div class="row">
-                        <input class="input" name="email" type="text" value="Email" size="30" /><br />
-                    </div>
-                    <div class="row">
-                        <textarea class="input" name="message" rows="7" cols="30">Message</textarea><br />
-                    </div>
-                    <input id="submit_button" type="submit" value="Send email" />
+            <div class="card4_1">
+                <form>      
+                    <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+                    <input name="email" type="text" class="feedback-input" placeholder="Email" />
+                    <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+                    <input type="submit" value="SUBMIT"/>
                 </form>
             </div>
         </div>
-        <p class="Copyright">Copyright © 2021, All Rights Reserved</p>
+        <p class="Copyright">Copyright © 2022, All Rights Reserved</p>
     </footer>
 </body>
 </html>
