solucionado el responsive, falta mejorar el contact form

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header class="gridContainer">
@@ -18,9 +19,10 @@
             <li class="contact"><a href="#Contact">Contact</a></li>
         </ul>
         <ul class="list_icons_head">
-            <img src="Images/IconFb.png" alt="Facebook">
-            <img src="Images/IconLkdn.png" alt="LinkedIn">
-            <img src="Images/IconGit.png" alt="GitHub">
+            <a href=""><img src="Images/IconFb.png" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/in/aguilaraliagajesus/"><img src="Images/IconLkdn.png" alt="LinkedIn"></a>
+            <a href="https://github.com/JesusAguilarAliaga"><img src="Images/IconGit.png" alt="GitHub"></a>
+            <a href="https://twitter.com/CodeByOne"><img src="Images/IconTwitter.png" alt="Twitter"></a>
         </ul>
     </header>
     <section>
@@ -85,9 +87,10 @@
                         <img src="Images/logo-1.png" alt="Foto">
                         <h2>Jesús Aguilar</h2>
                         <ul>
-                            <img src="Images/IconFb.png" alt="Facebook">
-                            <img src="Images/IconLkdn.png" alt="LinkedIn">
-                            <img src="Images/IconGit.png" alt="GitHub">
+                            <a href=""><img src="Images/IconFb.png" alt="Facebook"></a>
+                            <a href="https://www.linkedin.com/in/aguilaraliagajesus/"><img src="Images/IconLkdn.png" alt="LinkedIn"></a>
+                            <a href="https://github.com/JesusAguilarAliaga"><img src="Images/IconGit.png" alt="GitHub"></a>
+                            <a href="https://twitter.com/CodeByOne"><img src="Images/IconTwitter.png" alt="Twitter"></a>
                         </ul>
                     </div>
                     <p class="card3_1">lorem ipsum dolor sit amet lorem ipsum dolor sit amet lore lorem ipsum Lorem lorem
@@ -110,11 +113,11 @@
                 neque voluptatibus molestiae nobis at voluptas expedita, quos pers
             </p>
             <div class="card4_1">
-                <form>      
+                <form action="mailto:aguilaraliagajesus@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm"><!--       
                     <input name="name" type="text" class="feedback-input" placeholder="Name" />   
                     <input name="email" type="text" class="feedback-input" placeholder="Email" />
-                    <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-                    <input type="submit" value="SUBMIT"/>
+                    <textarea name="text" class="feedback-input" placeholder="Comment"></textarea> -->
+                    <input type="submit" value="SEND MAIL"/>
                 </form>
             </div>
         </div>
