--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Document</title>
+    <link rel="icon" href="Images/logo-1.png">
+    <title>JesusAguilar.com</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -113,7 +114,7 @@
                 neque voluptatibus molestiae nobis at voluptas expedita, quos pers
             </p>
             <div class="card4_1">
-                <form action="mailto:aguilaraliagajesus@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm"><!--       
+                <form class="submit_input" action="mailto:aguilaraliagajesus@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm"><!--       
                     <input name="name" type="text" class="feedback-input" placeholder="Name" />   
                     <input name="email" type="text" class="feedback-input" placeholder="Email" />
                     <textarea name="text" class="feedback-input" placeholder="Comment"></textarea> -->
